<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MenusActivity">

    <ImageView
        android:id="@+id/user"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitStart"
        android:src="@drawable/person_male"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:padding="8dp"
        android:text="@string/hello_user"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/user"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/menu1"
        android:layout_width="0dp"
        android:layout_height="112dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:scaleType="fitStart"
        android:src="@drawable/circle_cropped1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user" />

    <TextView
        android:id="@+id/menu_name1"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="20dp"
        android:padding="5dp"
        android:text="@string/menu1"
        android:textStyle="bold"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/menu1"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/menu_describe1"
        android:layout_width="0dp"
        android:layout_height="71dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/describe_menu1"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/menu1"
        app:layout_constraintTop_toBottomOf="@+id/menu_name1" />

    <ImageView
        android:id="@+id/menu2"
        android:layout_width="0dp"
        android:layout_height="112dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:scaleType="fitStart"
        android:src="@drawable/circle_cropped2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu1" />

    <TextView
        android:id="@+id/menu_name2"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:padding="5dp"
        android:text="@string/menu2"
        android:textStyle="bold"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/menu2"
        app:layout_constraintTop_toBottomOf="@+id/menu_describe1" />

    <TextView
        android:id="@+id/menu_describe2"
        android:layout_width="0dp"
        android:layout_height="71dp"
        android:layout_marginEnd="20dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/describe_menu2"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/menu2"
        app:layout_constraintTop_toBottomOf="@+id/menu_name2" />

    <ImageView
        android:id="@+id/menu3"
        android:layout_width="120dp"
        android:layout_height="115dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:scaleType="fitStart"
        android:src="@drawable/circle_cropped3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu2" />

    <TextView
        android:id="@+id/menu_name3"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:padding="5dp"
        android:text="@string/menu3"
        android:textColor="@color/red"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/menu3"
        app:layout_constraintTop_toBottomOf="@+id/menu_describe2" />

    <TextView
        android:id="@+id/menu_describe3"
        android:layout_width="0dp"
        android:layout_height="71dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_marginEnd="20dp"
        android:text="@string/describe_menu3"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/menu3"
        app:layout_constraintTop_toBottomOf="@+id/menu_name3" />

    <ImageView
        android:id="@+id/menu4"
        android:layout_width="120dp"
        android:layout_height="115dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:scaleType="fitStart"
        android:src="@drawable/circle_cropped4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu3" />

    <TextView
        android:id="@+id/menu_name4"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:padding="5dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:text="@string/menu4"
        android:textColor="@color/red"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/menu4"
        app:layout_constraintTop_toBottomOf="@+id/menu_describe3" />

    <TextView
        android:id="@+id/menu_describe4"
        android:layout_width="0dp"
        android:layout_height="71dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_marginEnd="20dp"
        android:text="@string/describe_menu4"
        android:textColor="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/menu4"
        app:layout_constraintTop_toBottomOf="@+id/menu_name4" />

    <Button
        android:id="@+id/order"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/fab_icon"
        android:gravity="bottom"
        app:backgroundTint="@color/red_500"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:onClick="pindah"/>

</androidx.constraintlayout.widget.ConstraintLayout>