<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailMenuActivity">

    <ImageView
        android:id="@+id/menu_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/menu1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/text_img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_img"
        android:padding="10dp"
        android:paddingStart="20dp"
        android:textSize="25dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/menu_img" />

    <TextView
        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="8dp"
        android:text="@string/price"
        android:textColor="@color/red"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textAlignment="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_img" />

    <com.codesgood.views.JustifiedTextView
        android:id="@+id/describe_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/describe_menu"
        android:textColor="@color/red"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/price" />

    <Button
        android:id="@+id/order_now"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="45dp"
        android:text="@string/btn_order"
        android:background="@color/btn_color"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:letterSpacing="0.05"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/describe_menu"
        app:textAllCaps="false"
        android:onClick="pindah"/>

    <Button
        android:id="@+id/back"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="45dp"
        android:text="@string/btn_back"
        android:background="@color/btn_color"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:letterSpacing="0.05"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/order_now"
        app:textAllCaps="false"
        android:onClick="kembali"/>

</androidx.constraintlayout.widget.ConstraintLayout>