<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/user"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitStart"
        android:src="@drawable/person_male"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:padding="8dp"
        android:text="@string/hello_user"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/user"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:src="@drawable/main"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/store"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="20dp"
        android:padding="8dp"
        android:scaleType="fitStart"
        android:text="@string/store"
        android:textColor="@color/red"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/city"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_image" />

    <TextView
        android:id="@+id/city"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="20dp"
        android:padding="8dp"
        android:scaleType="fitEnd"
        android:text="Cihampelas"
        android:textColor="@color/red"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_image" />

    <TextView
        android:id="@+id/location"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:padding="8dp"
        android:textColor="@color/red"
        android:textSize="20dp"
        android:textStyle="bold"
        android:text="@string/location"
        app:layout_constraintEnd_toStartOf="@+id/find"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/store" />

    <TextView
        android:id="@+id/find"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:padding="10dp"
        android:textColor="@color/red"
        android:textSize="15dp"
        android:textStyle="bold"
        android:text="Find on Maps"
        app:layout_constraintEnd_toStartOf="@+id/find_maps"
        app:layout_constraintTop_toBottomOf="@+id/store" />

    <ImageView
        android:id="@+id/find_maps"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginEnd="20dp"
        android:src="@drawable/find_vector"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/store" />

    <Button
        android:id="@+id/menu_button"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="45dp"
        android:text="@string/btn_menus"
        android:background="@color/btn_color"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:letterSpacing="0.05"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location"
        app:textAllCaps="false"
        android:onClick="pindah"/>

</androidx.constraintlayout.widget.ConstraintLayout>